--- a/app/src/main/res/layout/fragment_track_list.xml
+++ b/app/src/main/res/layout/fragment_track_list.xml
@@ -4,9 +4,8 @@
     android:layout_height="match_parent"
     tools:context="com.fract.nano.williamyoung.mylastfm.TrackListFragment" >
 
-    <TextView
-        android:id="@+id/track_list_text"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/track_list_name" />
+        android:layout_height="wrap_content" />
 </FrameLayout>
