--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,13 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="zero">0dp</dimen>
+
+    <!-- Track List -->
+    <dimen name="landscape_track_list_width">420dp</dimen>
+
+    <!-- List Item Dimen -->
+    <dimen name="list_item_padding">10dp</dimen>
+    <dimen name="image_end_padding">8dp</dimen>
 </resources>
