--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,20 +4,33 @@
         <menu>
             <item
                 android:id="@+id/nav_browse"
-                android:icon="@drawable/ic_menu_camera"
+                android:icon="@drawable/ic_menu_browse"
                 android:title="@string/nav_browse_top" />
             <item
                 android:id="@+id/nav_browse_country"
-                android:icon="@drawable/ic_menu_gallery"
+                android:icon="@drawable/ic_menu_globe"
                 android:title="@string/nav_browse_country" />
         </menu>
     </item>
     <item
         android:id="@+id/nav_search"
-        android:icon="@drawable/ic_menu_share"
+        android:icon="@drawable/ic_menu_search"
         android:title="@string/nav_search" />
     <item
         android:id="@+id/nav_playlist"
-        android:icon="@drawable/ic_menu_slideshow"
+        android:icon="@drawable/ic_menu_playlist"
         android:title="@string/nav_playlist" />
+
+    <item
+        android:id="@+id/nav_debug_tag"
+        android:title="DEBUG: Tag Search" />
+    <item
+        android:id="@+id/nav_debug_artist"
+        android:title="DEBUG: Artist Search" />
+    <item
+        android:id="@+id/nav_debug_track"
+        android:title="DEBUG: Track Search" />
+    <item
+        android:id="@+id/nav_debug_artalb"
+        android:title="DEBUG: Artist/Album Search" />
 </menu>
