--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,9 @@
     <!-- List Item Dimen -->
     <dimen name="list_item_padding">10dp</dimen>
     <dimen name="image_end_padding">8dp</dimen>
+
+    <!-- Search Interface -->
+    <dimen name="search_query_top_padding">8dp</dimen>
+    <dimen name="search_button_height">42dp</dimen>
+    <dimen name="search_button_width">200dp</dimen>
 </resources>
