--- a/app/src/main/res/layout/list_track_item.xml
+++ b/app/src/main/res/layout/list_track_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_height="@dimen/list_item_height"
     android:background="?android:attr/selectableItemBackground"
     android:paddingTop="@dimen/list_item_padding"
     android:paddingBottom="@dimen/list_item_padding">
