--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
 
     <!-- Track List -->
     <dimen name="landscape_track_list_width">420dp</dimen>
+    <dimen name="list_item_height">90dp</dimen>
 
     <!-- List Item Dimen -->
     <dimen name="list_item_padding">10dp</dimen>
