--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,4 +40,7 @@
         <item name="android:textStyle">bold</item>
         <item name="android:typeface">serif</item>
     </style>
+
+    <style name="DetailText" parent="@style/TextAppearance.AppCompat.Body1">
+    </style>
 </resources>
