--- a/app/src/main/res/layout-land/fragment_track_list.xml
+++ b/app/src/main/res/layout-land/fragment_track_list.xml
@@ -14,4 +14,14 @@
         android:paddingStart="@dimen/list_item_padding"
         android:paddingEnd="@dimen/list_item_padding"
         android:background="@android:color/white"/>
+
+    <TextView
+        android:id="@+id/error_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/empty"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingEnd="0dp"
+        android:paddingBottom="@dimen/activity_vertical_margin" />
 </FrameLayout>
