--- a/app/src/main/res/layout/fragment_detail_track.xml
+++ b/app/src/main/res/layout/fragment_detail_track.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,6 +8,7 @@
     tools:context=".DetailTrackFragment" >
 
     <LinearLayout
+        android:id="@+id/linear_images"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
@@ -26,21 +27,68 @@
             android:layout_weight="1"
             android:contentDescription="@string/empty" />
     </LinearLayout>
-
     <LinearLayout
+        android:id="@+id/linear_track"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linear_images"
+        android:paddingTop="@dimen/detail_track_name_padding"
+        android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/detail_text_artist"
+            android:id="@+id/track_name_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="3.2"
+            android:maxHeight="@dimen/track_name_max_height"
+            android:gravity="center_horizontal"
+            style="@style/DetailTrackText" />
 
         <TextView
-            android:id="@+id/detail_text_album"
+            android:id="@+id/track_duration_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:paddingStart="@dimen/duration_padding"
+            android:paddingEnd="0dp"
+            android:layout_gravity="center_vertical"
+            style="@style/DetailDurationText" />
     </LinearLayout>
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/detail_text_artist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linear_track"
+        android:paddingTop="@dimen/artist_padding_top"
+        style="@style/DetailArtAlbText" />
+
+    <TextView
+        android:id="@+id/detail_text_album"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/detail_text_artist"
+        android:paddingTop="@dimen/album_padding_top"
+        style="@style/DetailArtAlbText" />
+
+    <Button
+        android:id="@+id/band_url_button"
+        android:layout_width="@dimen/band_button_width"
+        android:layout_height="@dimen/band_button_height"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/album_padding_top"
+        android:background="@drawable/rounded_button"
+        android:text="@string/band_button"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_fab"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:stateListAnimator="@drawable/fab_state_anim"
+        android:elevation="6dp"
+        android:src="@drawable/ic_add"
+        android:contentDescription="@string/action_add"
+        style="@style/DetailFAB" />
+</RelativeLayout>
