--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -16,7 +16,7 @@
         android:id="@+id/query_one_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="text"
+        android:inputType="textCapWords"
         android:saveEnabled="true"
         android:maxLength="50"
         android:maxLines="1"
@@ -56,6 +56,7 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:saveEnabled="true"
+        android:enabled="false"
         android:maxLength="50"
         android:maxLines="1"
         android:hint="@string/input_two_hint" />
