--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,6 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="zero">0dp</dimen>
 
@@ -21,4 +20,17 @@
     <dimen name="search_query_top_padding">8dp</dimen>
     <dimen name="search_button_height">42dp</dimen>
     <dimen name="search_button_width">200dp</dimen>
+
+    <!-- Detail Track Activity -->
+    <dimen name="detail_track_name_padding">8dp</dimen>
+    <dimen name="track_name_max_height">60dp</dimen>
+    <dimen name="duration_padding">8dp</dimen>
+    <dimen name="artist_padding_top">20dp</dimen>
+    <dimen name="album_padding_top">20dp</dimen>
+    <dimen name="band_button_height">42dp</dimen>
+    <dimen name="band_button_width">200dp</dimen>
+
+    <!-- FAB -->
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_press_translation_z">6dp</dimen>
 </resources>
