--- a/app/src/main/res/layout-land/fragment_detail_track.xml
+++ b/app/src/main/res/layout-land/fragment_detail_track.xml
@@ -4,34 +4,36 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     tools:context=".DetailTrackFragment" >
 
     <LinearLayout
         android:id="@+id/linear_images"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
         <ImageView
             android:id="@+id/track_image_view"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
+            android:paddingBottom="@dimen/land_image_padding"
             android:contentDescription="@string/empty" />
 
         <ImageView
             android:id="@+id/track_cover_view"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
+            android:paddingTop="@dimen/land_image_padding"
             android:contentDescription="@string/empty" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linear_track"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/linear_images"
+        android:layout_toEndOf="@id/linear_images"
         android:paddingTop="@dimen/detail_track_name_padding"
         android:orientation="horizontal" >
 
@@ -39,10 +41,10 @@
             android:id="@+id/track_name_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3.2"
+            android:layout_weight="2"
             android:maxHeight="@dimen/track_name_max_height"
             android:gravity="center_horizontal"
-            style="@style/DetailTrackText" />
+            style="@style/DetailTrackText"/>
 
         <TextView
             android:id="@+id/track_duration_text"
@@ -60,7 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/linear_track"
-        android:paddingTop="@dimen/artist_padding_top"
+        android:layout_toEndOf="@id/linear_images"
+        android:paddingTop="@dimen/album_padding_top"
         style="@style/DetailArtAlbText" />
 
     <TextView
@@ -68,6 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/detail_text_artist"
+        android:layout_toEndOf="@id/linear_images"
         android:paddingTop="@dimen/album_padding_top"
         style="@style/DetailArtAlbText" />
 
@@ -76,8 +80,10 @@
         android:layout_width="@dimen/band_button_width"
         android:layout_height="@dimen/band_button_height"
         android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@id/linear_images"
         android:layout_marginBottom="@dimen/album_padding_top"
         android:background="@drawable/rounded_button"
+        android:elevation="2dp"
         android:text="@string/band_button" />
 
     <android.support.design.widget.FloatingActionButton
