--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,7 +19,8 @@
     <!-- Search Interface -->
     <dimen name="search_query_top_padding">8dp</dimen>
     <dimen name="search_button_height">42dp</dimen>
-    <dimen name="search_button_width">200dp</dimen>
+    <dimen name="search_button_width">160dp</dimen>
+    <dimen name="search_button_margin_top">8dp</dimen>
 
     <!-- Detail Track Activity -->
     <dimen name="detail_track_name_padding">8dp</dimen>
@@ -33,4 +34,5 @@
     <!-- FAB -->
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="fab_press_translation_z">6dp</dimen>
+    <dimen name="fab_dimen">56dp</dimen>
 </resources>
