Commit #14a: java package movement - organization

--- a/app/src/main/res/layout/activity_detail_track.xml
+++ b/app/src/main/res/layout/activity_detail_track.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.fract.nano.williamyoung.mylastfm.DetailTrackActivity">
+    tools:context=".ui.DetailTrackActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
