--- a/app/src/main/res/layout-land/fragment_detail_track.xml
+++ b/app/src/main/res/layout-land/fragment_detail_track.xml
@@ -5,7 +5,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="horizontal"
-    tools:context=".DetailTrackFragment" >
+    tools:context=".ui.DetailTrackFragment" >
 
     <LinearLayout
         android:id="@+id/linear_images"
