--- a/app/src/main/res/layout-land/fragment_track_list.xml
+++ b/app/src/main/res/layout-land/fragment_track_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/MaterialGrey200"
     android:layout_gravity="center_horizontal"
-    tools:context="com.fract.nano.williamyoung.mylastfm.TrackListFragment" >
+    tools:context=".ui.TrackListFragment" >
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
