--- a/app/src/main/res/layout/fragment_detail_track.xml
+++ b/app/src/main/res/layout/fragment_detail_track.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -90,5 +91,6 @@
         android:elevation="@dimen/fab_press_translation_z"
         android:src="@drawable/ic_add"
         android:contentDescription="@string/action_add"
-        style="@style/DetailFAB" />
+        style="@style/DetailFAB"
+        app:backgroundTint="@color/MaterialLightGreen500"/>
 </RelativeLayout>
