--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:colorPrimary">@color/MaterialRed500</item>
-        <item name="android:colorPrimaryDark">@color/MaterialRed700</item>
-        <item name="android:colorAccent">@color/MaterialLightGreen500</item>
+        <item name="colorPrimary">@color/MaterialRed500</item>
+        <item name="colorPrimaryDark">@color/MaterialRed700</item>
+        <item name="colorAccent">@color/MaterialLightGreen500</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="AppTheme">
