--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -35,4 +35,10 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="fab_press_translation_z">6dp</dimen>
     <dimen name="fab_dimen">56dp</dimen>
+
+    <!-- Widget -->
+    <dimen name="widget_margin">8dp</dimen>
+    <dimen name="widget_image_size">40dp</dimen>
+    <dimen name="widget_track_height">80dp</dimen>
+    <dimen name="widget_track_width">250dp</dimen>
 </resources>
