--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,4 +60,15 @@
         <item name="android:layout_marginEnd">@dimen/fab_margin</item>
         <item name="android:layout_marginBottom">@dimen/fab_margin</item>
     </style>
+
+    <!-- Widget -->
+    <style name="WidgetAppText" parent="@style/TextAppearance.AppCompat.Body1">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/MaterialGrey800</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="WidgetText" parent="@style/WidgetAppText">
+        <item name="android:textSize">13sp</item>
+    </style>
 </resources>
