--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,7 +38,9 @@
 
     <!-- Widget -->
     <dimen name="widget_margin">8dp</dimen>
-    <dimen name="widget_image_size">40dp</dimen>
-    <dimen name="widget_track_height">80dp</dimen>
+    <dimen name="widget_image_size">120dp</dimen>
+    <dimen name="widget_image_small">90dp</dimen>
+    <dimen name="widget_track_height">40dp</dimen>
     <dimen name="widget_track_width">250dp</dimen>
+    <dimen name="widget_track_margin">8dp</dimen>
 </resources>
